src/test/deca/context/invalid/test_error_3.25-2.deca
// Description:
//    Programme soulevant l'erreur (3.25)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : Expression booléenne attendue (règle 3.25)
//
// Historique:
//    cree le 13/01/2022

{
	float f = 1.0;
   	while(f) {
   	}
}